--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/components/UI.css">
+    <link rel="stylesheet" href="css/pages/LandingPage.css">
+    <link rel="stylesheet" href="css/pages/TripDashboard.css">
     <link rel="manifest" href="manifest.json">
 </head>
 
@@ -50,7 +53,15 @@
             });
         }
     </script>
-    <script type="text/babel" src="js/app.js?v=2"></script>
+    <script type="text/babel" src="js/Config.js"></script>
+    <script type="text/babel" src="js/data/SeedData.js"></script>
+    <script type="text/babel" src="js/components/Icons.js"></script>
+    <script type="text/babel" src="js/components/UI.js"></script>
+    <script type="text/babel" src="js/components/BackpackTab.js"></script>
+    <script type="text/babel" src="js/components/DocumentsTab.js"></script>
+    <script type="text/babel" src="js/pages/LandingPage.js"></script>
+    <script type="text/babel" src="js/pages/TripDashboard.js"></script>
+    <script type="text/babel" src="js/App.js"></script>
 </body>
 
 </html>
