--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
     <script type="text/babel" src="js/components/DocumentsTab.js"></script>
     <script type="text/babel" src="js/pages/LandingPage.js"></script>
     <script type="text/babel" src="js/pages/TripDashboard.js"></script>
-    <script type="text/babel" src="js/App.js"></script>
+    <script type="text/babel" src="js/app.js"></script>
 </body>
 
 </html>
