modifiche grafiche (M3 expressive)

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>London Trip Planner 🇬🇧</title>
 
+    <!-- Google Fonts: Outfit (Display) & Plus Jakarta Sans (Body) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;700;800&family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
+
     <!-- React & ReactDOM -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -55,6 +62,7 @@
     </script>
     <script type="text/babel" src="js/Config.js"></script>
     <script type="text/babel" src="js/data/SeedData.js"></script>
+    <script type="text/babel" src="js/utils/Theme.js"></script>
     <script type="text/babel" src="js/components/Icons.js"></script>
     <script type="text/babel" src="js/components/UI.js"></script>
     <script type="text/babel" src="js/components/BackpackTab.js"></script>
