--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
     <script type="text/babel" src="js/data/SeedData.js"></script>
     <script type="text/babel" src="js/utils/Theme.js"></script>
     <script type="text/babel" src="js/components/Icons.js"></script>
+    <script type="text/babel" src="js/components/ThemeToggle.js"></script>
     <script type="text/babel" src="js/components/UI.js"></script>
     <script type="text/babel" src="js/components/BackpackTab.js"></script>
     <script type="text/babel" src="js/components/DocumentsTab.js"></script>
