--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- QR Code Libraries -->
+    <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/components/UI.css">
@@ -68,6 +72,8 @@
     <script type="text/babel" src="js/components/UI.js"></script>
     <script type="text/babel" src="js/components/BackpackTab.js"></script>
     <script type="text/babel" src="js/components/DocumentsTab.js"></script>
+    <script type="text/babel" src="js/components/TicketScanner.js"></script>
+    <script type="text/babel" src="js/components/TicketView.js"></script>
     <script type="text/babel" src="js/pages/LandingPage.js"></script>
     <script type="text/babel" src="js/pages/TripDashboard.js"></script>
     <script type="text/babel" src="js/app.js"></script>
