--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>London Trip Planner 🇬🇧</title>
 
     <!-- Google Fonts: Outfit (Display) & Plus Jakarta Sans (Body) -->
@@ -75,7 +78,7 @@
     <script type="text/babel" src="js/components/TicketScanner.js"></script>
     <script type="text/babel" src="js/components/TicketView.js"></script>
     <script type="text/babel" src="js/pages/LandingPage.js"></script>
-    <script type="text/babel" src="js/pages/TripDashboard.js"></script>
+    <script type="text/babel" src="js/pages/TripDashboard_v2.js"></script>
     <script type="text/babel" src="js/app.js"></script>
 </body>
 
