--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,8 @@
             });
         }
     </script>
-    <script type="text/babel" src="js/Config.js"></script>
+    <script src="js/Config.js?v=3"></script>
+    <script src="js/secrets.js"></script>
     <script type="text/babel" src="js/data/SeedData.js"></script>
     <script type="text/babel" src="js/utils/Theme.js"></script>
     <script type="text/babel" src="js/components/Icons.js"></script>
@@ -78,6 +79,8 @@
     <script type="text/babel" src="js/components/TicketScanner.js"></script>
     <script type="text/babel" src="js/components/TicketView.js"></script>
     <script type="text/babel" src="js/pages/LandingPage.js"></script>
+    <script type="text/babel" src="js/utils/GeminiScanner.js"></script>
+    <script type="text/babel" src="js/components/CameraCapture.js"></script>
     <script type="text/babel" src="js/pages/TripDashboard.js"></script>
     <script type="text/babel" src="js/app.js"></script>
 </body>
