--- a/public/index.html
+++ b/public/index.html
@@ -76,13 +76,14 @@
     <script type="text/babel" src="js/components/UI.js"></script>
     <script type="text/babel" src="js/components/BackpackTab.js"></script>
     <script type="text/babel" src="js/components/DocumentsTab.js"></script>
-    <script type="text/babel" src="js/components/TicketScanner.js"></script>
-    <script type="text/babel" src="js/components/TicketView.js"></script>
+    <script type="text/babel" src="js/components/TicketScanner.js?v=cachebust3"></script>
+    <script type="text/babel" src="js/components/TicketView.js?v=cachebust2"></script>
     <script type="text/babel" src="js/pages/LandingPage.js"></script>
     <script type="text/babel" src="js/utils/GeminiScanner.js"></script>
+    <script type="text/babel" src="js/utils/BCBPParser.js?v=cachebust1"></script>
     <script type="text/babel" src="js/components/CameraCapture.js"></script>
-    <script type="text/babel" src="js/pages/TripDashboard.js"></script>
-    <script type="text/babel" src="js/app.js"></script>
+    <script type="text/babel" src="js/pages/TripDashboard.js?v=cachebust2"></script>
+    <script type="text/babel" src="js/app.js?v=cachebust2"></script>
 </body>
 
 </html>
