aggiunto meteo e consigli zaino

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,8 @@
     <script type="text/babel" src="js/components/TicketScanner.js?v=cachebust3"></script>
     <script type="text/babel" src="js/components/TicketView.js?v=cachebust2"></script>
     <script type="text/babel" src="js/pages/LandingPage.js"></script>
-    <script type="text/babel" src="js/utils/GeminiScanner.js"></script>
+    <script type="text/babel" src="js/utils/GeminiService.js"></script>
+    <script type="text/babel" src="js/utils/WeatherService.js?v=cachebust_weather_1"></script>
     <script type="text/babel" src="js/utils/BCBPParser.js?v=cachebust1"></script>
     <script type="text/babel" src="js/components/CameraCapture.js"></script>
     <script type="text/babel" src="js/pages/TripDashboard.js?v=cachebust2"></script>
